--- a/modules/kubeadm/resources/kubeadm_master.cfg
+++ b/modules/kubeadm/resources/kubeadm_master.cfg
@@ -1,7 +1,7 @@
 apiVersion: kubeadm.k8s.io/v1alpha1
 kind: MasterConfiguration
 api:
-  advertiseAddress: ${ip}
+  advertiseAddress: ${apiserver_ip}
   bindPort: ${port}
 networking:
   serviceSubnet: ${service_cidr}
@@ -17,4 +17,4 @@ controllerManagerExtraArgs:
 schedulerExtraArgs:
   feature-gates: "PersistentLocalVolumes=true,VolumeScheduling=true,MountPropagation=true"
 apiServerCertSANs:
-- ${cluster_public_dns}
+- ${apiserver_dns}
