--- a/modules/kubeadm/resources/kubeadm_master.cfg
+++ b/modules/kubeadm/resources/kubeadm_master.cfg
@@ -2,14 +2,16 @@ apiVersion: kubeadm.k8s.io/v1alpha1
 kind: MasterConfiguration
 api:
   advertiseAddress: ${apiserver_ip}
-  bindPort: ${port}
+  bindPort: 6443
 networking:
   serviceSubnet: ${service_cidr}
   podSubnet: ${pod_cidr}
 kubernetesVersion: ${kube_version}
 token: ${token}
 tokenTTL: ${token_ttl}
-selfHosted: false
+selfHosted: true
+featureGates:
+  SelfHosting: true
 apiServerExtraArgs:
   feature-gates: "PersistentLocalVolumes=true,VolumeScheduling=true,MountPropagation=true"
 controllerManagerExtraArgs:
@@ -17,4 +19,4 @@ controllerManagerExtraArgs:
 schedulerExtraArgs:
   feature-gates: "PersistentLocalVolumes=true,VolumeScheduling=true,MountPropagation=true"
 apiServerCertSANs:
-- ${apiserver_dns}
+${apiserver_dns}
