--- a/modules/kubeadm/resources/kubeadm_master.cfg
+++ b/modules/kubeadm/resources/kubeadm_master.cfg
@@ -9,10 +9,12 @@ networking:
 kubernetesVersion: ${kube_version}
 token: ${token}
 tokenTTL: ${token_ttl}
-selfHosted: true
-featureGates:
-  SelfHosting: true
+#selfHosted: true
+cloudProvider: ${cloud_provider}
+#featureGates:
+#  SelfHosting: true
 apiServerExtraArgs:
+  external-hostname: ${hostname}
   feature-gates: "PersistentLocalVolumes=true,VolumeScheduling=true,MountPropagation=true"
 controllerManagerExtraArgs:
   feature-gates: "PersistentLocalVolumes=true,VolumeScheduling=true,MountPropagation=true"
