--- a/test/elasticsearch/manifests/es-cluster.yaml
+++ b/test/elasticsearch/manifests/es-cluster.yaml
@@ -9,7 +9,7 @@ parameters:
 apiVersion: enterprises.upmc.com/v1
 kind: ElasticsearchCluster
 metadata:
-  name: example-es-cluster
+  name: vg-cluster
 spec:
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:6.1.3
@@ -31,3 +31,31 @@ spec:
     limits:
       memory: 1024Mi
       cpu: '1'
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: kibana-vg-cluster
+spec:
+  ports:
+  - port: 443
+    targetPort: 5601
+  selector:
+    name: kibana-vg-cluster
+    component: elasticsearch-vg-cluster
+    role: kibana
+  type: LoadBalancer
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: cerebro-vg-cluster
+spec:
+  ports:
+  - port: 80
+    targetPort: 9000
+  selector:
+    name: cerebro-vg-cluster
+    component: elasticsearch-vg-cluster
+    role: cerebro
+  type: LoadBalancer
